<resources>
    <string name="app_name">Заметки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Заметки</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_aboutDev">О разработчике</string>
    <string name="menu_leave">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_description">Описание</string>
    <string name="item_title">Оглавление</string>
    <string name="done">Готово</string>
    <string name="input_text">Введите текст</string>
    <string name="search_notes">Поиск заметок</string>
    <string name="start_working">Начать работу</string>
    <string name="skip1">Пропустить</string>
    <string name="text_of_first_fragment">Очень удобный фунуционал</string>
    <string name="text_of_third_fragment">Куча функций и интересных фишек</string>
    <string name="text_of_second_fragment">Быстрый, качественный продукт</string>
    <string name="text_of_dialog">Удалить фото профиля?</string>
    <string name="text_of_room_dialog">Удалить заметку?</string>
    <string name="delete_data_massage">Удалить фото профиля?</string>
    <string name="listening">Говорите...</string>
    <string name="text_of_error">Введите текст</string>
    <string name="text_of_voice_error">Не удалось распозанть запрос</string>
    <string name="auth_input_password">Введите пароль!</string>
    <string name="auth_input_email">Введите Email!</string>
    <string name="login_failed">Не удалось войти!</string>
    <string name="login_success">Вход прошел успешно!</string>
    <string name="auth_failed">Не удалось авторизоваться!</string>
    <string name="auth_success">Авторизация прошла успешно!</string>
    <string name="email_send">Письмо отправлено</string>
    <string name="email_dont_send">Не удалось отправить письмо</string>
    <string name="send_email_verification">Вам было отправлено письмо с подтверждением</string>
    <string name="dont_send_email_verification">Не удалось отправить письмо с подтверждением</string>
</resources>