<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/spacer"
            android:title=""/>

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_error_outline_24"
            android:title="@string/menu_aboutDev" />

        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_leave" />
    </group>
</menu>