<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.noteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_noteFragment"
            app:destination="@id/note_fragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.noteapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.noteapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_gallery" >
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.noteapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_aboutDev"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/note_fragment"
        android:name="com.example.noteapp.ui.form.NoteFragment"
        android:label=""
        tools:layout="@layout/fragment_note" >
    </fragment>

    <fragment
        android:id="@+id/on_board_fragment"
        android:name="com.example.noteapp.onboard.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" >
    </fragment>
</navigation>